# gitcheck

./: CHANGELOG.txt  MIGRATION.md  README.rst  pyproject.toml
gitcheck/: gitcheck.py  https_utils.py  validate_token.py
